<resources>
    <string name="app_name">StarGazrAndroid</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="action_settings">Settings</string>
    <string name="random_image">Random image</string>
    <string name="fetch_data">Fetch Data</string>
    <string name="date">Date</string>
    <string name="apod_image">APOD Image</string>
    <string name="view_details">Details</string>
    <string name="detail_image">Detail APOD image</string>
    <string name="title_add_image">Add Image</string>
    <string name="settings">Settings</string>
    <string name="item_image">Item image</string>
    <string name="from_gallery">From Gallery</string>
    <string name="take_picture">Take Picture</string>
    <string name="save">Save</string>
    <string name="user_selected_image">User chosen image</string>
    <string name="view_save">save</string>
    <string name="add_image">Add Image</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
</resources>