<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.stargazrandroid.ui.settings.SettingsFragment"
        android:label="Settings"
        tools:layout="@layout/fragment_settings">
    </fragment>

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.stargazrandroid.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_navigation_home_to_navigation_dashboard"
            app:destination="@id/navigation_dashboard" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.stargazrandroid.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.stargazrandroid.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_add_image"
        android:name="com.example.stargazrandroid.ui.addImage.AddImageFragment"
        android:label="navigation_add_image" />

    <fragment
        android:id="@+id/navigation_saved_items"
        android:name="com.example.stargazrandroid.ui.dashboard.SavedItemsFragment"
        android:label="Saved Items"
        tools:layout="@layout/fragment_saved_items" />

    <fragment
        android:id="@+id/navigation_saved_item_detail"
        android:name="com.example.stargazrandroid.ui.dashboard.SavedItemDetailFragment"
        android:label="Saved Item Detail"
        tools:layout="@layout/fragment_saved_item_detail" />

<!--    <fragment-->
<!--        android:id="@+id/navigation_saved_item_detail"-->
<!--        android:name="com.example.stargazrandroid.ui.dashboard.SavedItemDetailFragment"-->
<!--        android:label="Saved Item Detail"-->
<!--        tools:layout="@layout/fragment_saved_item_detail" >-->
<!--        <argument-->
<!--            android:name="item"-->
<!--            app:argType="com.example.stargazrandroid.model.SavedItem"-->
<!--            android:defaultValue="@null"-->
<!--            app:nullable="true" />-->
<!--    </fragment>-->
</navigation>